--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.3",
+    "firebase": "^9.17.1",
     "framer-motion": "^9.0.7",
     "json-server": "^0.17.1",
     "react": "^18.2.0",
