--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.3.3",
+    "axios": "^1.3.4",
     "firebase": "^9.17.1",
-    "framer-motion": "^9.0.7",
+    "framer-motion": "^9.1.7",
     "json-server": "^0.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
